--- a/src/components/InteractMenu/InteractMenu.css
+++ b/src/components/InteractMenu/InteractMenu.css
@@ -1,24 +1,56 @@
-.container {
+.interactMenu {
+  width: 100%;
+  height: 100%;
+  grid-column: 2/3;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 15%;
+}
+
+.statsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 50%;
+  margin: 5px;
+}
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+  width: 100%;
+}
+
+.statsLabel {
+  width: 100%;
   text-align: center;
+}
+
+.statsBackgroundBar {
+  position: relative;
+  display: grid;
+  margin: 5px 0px;
+  width: 100%;
+  height: var(--statsBarHeight);
+  overflow: hidden;
+  border-radius: 60px;
+  background: #c8c8c8;
+}
+
+.statsForegroundBar {
   position: absolute;
-  left: 0;
+  height: 100%;
+  background-color: var(--ion-color-success);
+}
+
+.statsValue {
+  position: absolute;
+  color: var(--ion-color-success-contrast);
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-.container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-.container a {
-  text-decoration: none;
+  margin-right: 10px;
+  line-height: var(--statsBarHeight);
+  z-index: 1;
 }
