--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -3,6 +3,9 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
+  --statsBarHeight: 30px;
+  box-sizing: border-box;
+
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
